Modified:   Added `h-full` and `overflow-hidden` to prevent from unintended page scrolling issue (src/styles/global.css) Modified:   Removed `pb-20` from the main element layout (src/layouts/Layout.astro)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,6 +111,10 @@
 }
 
 @layer base {
+  html,
+  body {
+    @apply h-full overflow-hidden;
+  }
   * {
     @apply border-border outline-ring/50;
   }
